--- a/css/NauticalStyles.css
+++ b/css/NauticalStyles.css
@@ -177,13 +177,13 @@ input[type=checkbox]{
     overflow: hidden;
     height:100vh;
     width:100vw;
-    background-image: radial-gradient(circle, rgba(255, 254, 254, 0.39) 1%, rgb(0, 0, 0) 20%);
+
 }
 .intro_img{
     position:absolute;
     align-items: center;
     overflow: hidden;
-    opacity: 0.7;
+    opacity: 1;
     z-index: 1;
     box-sizing: border-box;
 	border: 5px #0E7A93;
@@ -199,6 +199,7 @@ input[type=checkbox]{
     text-align: center;
     z-index: 2;
     margin: auto;
+    font-size: larger;
 }
 .profiles{
        margin:auto;
